fixed the alignment of text

--- a/public/modules/slideshows/slideTemplates/iQuestEvent/slide.scss
+++ b/public/modules/slideshows/slideTemplates/iQuestEvent/slide.scss
@@ -2,6 +2,7 @@
 .template-iQuestEvents {
     width: 1920px;
     height: 1080px;
+    text-align: left;
     .iQuestEvents-left-side {
         background-image: url('[RELATIVE-PATH]\leftSide.png');
         background-size: 94px 100%;
